:rocket: Choose package name and go for it

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "emojees",
-  "version": "0.1.0",
+  "name": "react-emojis",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "node-sass": "^4.12.0",
