:zap: Setup project in a way that we can have both a Github page and a react component distributed through 'npm'
- `npm run build` builds the React application that is served as a Github page. That's the documentation.
- `npm run build-npm` outputs the React component as an installable 'npm' module

--- a/.npmignore
+++ b/.npmignore
@@ -10,10 +10,19 @@
 
 # production
 /build
-/lib
+/bin
+/public
+
+# documentation
+/docs
 
 # development mode
+.babelrc
+.env
 .env.*
+/src
+TODO.md
+webpack.config.*
 
 # misc
 .DS_Store
