--- a/package.json
+++ b/package.json
@@ -67,5 +67,11 @@
     "babel-loader": "^8.0.6",
     "webpack": "^4.34.0",
     "webpack-cli": "^3.3.4"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ]
   }
 }
