--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-emojis",
-  "version": "0.2.1",
+  "version": "1.0.0",
   "private": false,
   "description": "Render scalable emojis with proper accessibility markup",
   "keywords": [
@@ -43,7 +43,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "deploy-npm": "npm publish",
+    "release": "npm run deploy && npm run deploy-npm"
   },
   "eslintConfig": {
     "extends": "react-app"
