--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-emojis",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": false,
   "description": "Render scalable emojis with proper accessibility markup",
   "keywords": [
@@ -18,6 +18,7 @@
     "url": "https://github.com/dreamyguy/react-emojis"
   },
   "main": "lib/index.js",
+  "module": "lib/index.es.js",
   "author": {
     "name": "Wallace Sidhrée",
     "email": "i@dreamyguy.com",
@@ -37,7 +38,7 @@
     "prebuild": "echo 🚀  Runnin 'build', hang tight!",
     "build": "react-scripts build",
     "postbuild": "echo 🎉 'build' was completed",
-    "prebuild-npm": "echo 🏎  Runnin 'build', hang tight!",
+    "prebuild-npm": "echo 🏎  Runnin 'build', hang tight! && ./bin/preBuildNpm.sh",
     "build-npm": "NODE_ENV=npm webpack --config webpack.config.npm.js",
     "postbuild-npm": "echo 🎈 'build-npm' was completed",
     "test": "react-scripts test",
@@ -69,11 +70,5 @@
     "babel-loader": "^8.0.6",
     "webpack": "^4.34.0",
     "webpack-cli": "^3.3.4"
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-env",
-      "@babel/preset-react"
-    ]
   }
 }
