--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "fork-me-on-github": "^1.0.6",
     "gh-pages": "^2.0.1",
     "node-sass": "^4.12.0",
     "react-scripts": "3.0.1",
